# video-persona-gen

./: .env.hpc.local.example  .gitignore  BENCHMARKS.md  CODEX_CONTEXT.md  DATASET_CARD.md  ETHICS.md  EXPERIMENTS.md  MODEL_CARD.md  PROJECT_CONTEXT.md  PROJECT_INSTRUCTIONS.md  PROJECT_PROGRESS.md  README.md  SESSION_SUMMARY.md  pyproject.toml  requirements.txt
configs/: evaluate.yaml  evaluate_motion.yaml  extract_audio_features.yaml  extract_motion.yaml  extract_motion_features.yaml  predict_flow.yaml  predict_flow_cmr.yaml  predict_flow_tuned.yaml  predict_flow_w2_calm.yaml  predict_w2v_alive.yaml  preprocess_hdtf.yaml  preprocess_self.yaml  render_liveportrait.yaml  render_predicted_motion.yaml  train_flow_w2v.yaml  train_flow_w2v_cfg.yaml  train_motion_cvae.yaml  train_motion_gru.yaml  train_motion_gru_mel.yaml  train_motion_gru_mel_bi.yaml  train_motion_gru_w2v.yaml  train_motion_gru_w2v_reg.yaml  train_motion_transformer.yaml  train_syncnet.yaml  train_voice_clone.yaml
docs/: architecture.md  compute.md  data_pipeline.md  evaluation.md  experiments.md  limitations.md  reproducibility.md  resume.md  training.md
scripts/: create_manifest.py  create_splits.py  eval_sync_confidence.py  evaluate_motion.py  extract_audio_features.py  extract_motion.py  extract_motion_features.py  extract_wav2vec_features.py  fetch_bowdoin_liveportrait_output.sh  fetch_bowdoin_predicted_render_output.sh  fetch_bowdoin_preprocess_output.sh  inspect_sequence_dataset.py  inspect_video.py  make_portfolio_figures.py  predict_motion.py  preprocess_dataset.py  render_predicted_motion.py  (+10 more)
(+88 files in other folders)
